--- a/vignettes/bikedata.Rmd
+++ b/vignettes/bikedata.Rmd
@@ -55,14 +55,8 @@ following command:
 ```{r install, eval = FALSE}
 install.packages ('bikedata')
 ```
-
-```{r, echo = FALSE, message = FALSE, results = 'hide', eval = TRUE}
-devtools::load_all('..', export_all = FALSE)
-```
-
 Once installed, it can be loaded in the usual way:
-
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 library (bikedata)
 ```
 
